2008-12-04  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-22
        
        * Moved WikiException & PluginException to the org.apache.jspwiki.api
        package.  This is a part of the overall transition to have a stable API.

        * [JSPWIKI-291] Added patch from Thomas Engelschmidt to replace ORO
        regexp library with Java built-in regexps for DenouncePlugin, as well
        as DenouncePluginTest.  Thanks!

2008-12-02  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-21

        * Split .action package: ActionBeans (only) remain in .action, while
        Stripes support classes move to .ui.stripes. Also, the JSP migrator
        code moves to package .ui.migrator. Many Javadoc tweaks also.
        
2008-12-02  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-20

        * [JSPWIKI-444] Wysiwyg editors (such as FCK) no longer duplicate
        the permalink anchors.

2008-12-02  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-19

        * Fixed JSPs so that they compile. They still don't work, though.

2008-12-02  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-18

        * Checked in the Stripes code (about 220 classes, tests, JSPs
        and other files. All code compiles clean, but the JSPs do NOT
        work at the moment. Unit tests run clean except for some
        stray failing Stripes-related unit tests. See the file
        doc/README - Stripes Migration for some (repeat, SOME) details
        of what it all means. I'll sort out the JSP issues later this
        week.

2008-11-06  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-17
        
        * Logging package now implements an varargs interface for
        faster and more flexible logging.  Please see Logger javadocs
        for further information.
        
2008-11-30 Harry Metske <metskem@apache.org>

        * 3.0.0-svn-16
        
        * JSPWIKI-447: InstantiationException in PluginManager