@@ -22,10 +22,10 @@ package com.ecyrd.jspwiki.filters;
 
 import java.util.Properties;
 
+import org.apache.jspwiki.api.FilterException;
+
 import com.ecyrd.jspwiki.WikiContext;
 import com.ecyrd.jspwiki.WikiEngine;
-import com.ecyrd.jspwiki.filters.BasicPageFilter;
-import com.ecyrd.jspwiki.filters.FilterException;
 import com.ecyrd.jspwiki.parser.CreoleToJSPWikiTranslator;
 
 /**
